version 0.4.9
--------------------------------------------------
* Fix wrap fuction over n_word_max (issue #41).
* Inaccuracy flag is propagated to a new Fxp or resulting Fxp if one or more input Fxp are inaccurate (issue #48).
* New `from_bin` method and function. Set value or create new Fxp from a binary string (issue #49).
* Support to complex binary strings as input format.

version 0.4.8
--------------------------------------------------
* Fix value dtype handling for windows OS and uint as 32 bits.
* __getitem__ method return a Fxp with raw value as view (this solve issue #62).
* Add tests for issues #60 and #62.

version 0.4.7
--------------------------------------------------
* Keep val as original_vdtype and not as object when it is convenient (solve issue #60).
* Convert vdtype to float when scaling transformation is applied.
* Add `abs` method. 

version 0.4.6
--------------------------------------------------
* Fix complex `truediv` and `floordiv` methods (issue #53).
* Fix complex binary, hexadecimal and base representation for arrays (issue #56).
* Tests updates for complex representations.
* Solve init by dtype when it is complex (issue #58).

version 0.4.5
--------------------------------------------------
* Fix FutureWarning in subdtype 'str' comparison (issue #45).
* dtype argument added to `resize` method.
* new method `get_dtype` to get dtype using argument `notation`.
* Docstring of `get_dtype`, `resize`, `reshape`, `flatten`, `set_val`, `astype`, `get_val`, `raw`, `uraw`, `equal`
* Order parameter for `reshape` and flatten methods.

version 0.4.4
--------------------------------------------------
* Fix wrapping and scaling issue #44.

version 0.4.3
--------------------------------------------------
* Fxp adds `config` as optional init parameter (kwarg).
* Functions (operators) over one and two variables copy first operator configuration by default.
* Changes above fixed wrap overflowing bug after operation (issue #42 solved).