@@ -4,6 +4,7 @@ version 0.4.9
 * Inaccuracy flag is propagated to a new Fxp or resulting Fxp if one or more input Fxp are inaccurate (issue #48).
 * New `from_bin` method and function. Set value or create new Fxp from a binary string (issue #49).
 * Support to complex binary strings as input format.
+* Force to `config.op_input_size='best'` when power operation has an constant operator (non-Fxp). Add warning message. (issue #89).
 
 version 0.4.8
 --------------------------------------------------
